# lockchain-zfs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  release.yml
assets/: favicons.html  site.webmanifest
assets/ascii/: lockchain_banner.txt  lockchain_banner_ansi.sh
assets/ios/AppIcon.appiconset_square/: Contents.json
assets/themes/: README-colors.txt  lockchain-colors.json  lockchain-theme.css
crates/lockchain-cli/: Cargo.toml
crates/lockchain-cli/src/: main.rs  tui.rs
crates/lockchain-core/: Cargo.toml
crates/lockchain-core/src/: config.rs  error.rs  keyfile.rs  lib.rs  logging.rs  provider.rs  service.rs
crates/lockchain-core/src/workflow/: diagnostics.rs  mod.rs  provisioning.rs  repair.rs  self_test.rs
crates/lockchain-core/templates/: lockchain-load-key.conf  lockchain-load-key.service  lockchain-load-key.sh  lockchain-module-setup.sh  lockchain-zfs-load-module.conf
crates/lockchain-daemon/: Cargo.toml
crates/lockchain-daemon/src/: main.rs  usb.rs
crates/lockchain-key-usb/: Cargo.toml
crates/lockchain-key-usb/src/: main.rs
crates/lockchain-ui/: Cargo.toml
crates/lockchain-ui/src/: main.rs
crates/lockchain-zfs/: Cargo.toml
crates/lockchain-zfs/src/: command.rs  lib.rs  main.rs  parse.rs  system.rs
crates/lockchain-zfs/tests/: unlock_smoke.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-module-provider.md
packaging/: cargo-deb.toml  install-systemd.sh
packaging/debian/: postinst  prerm
packaging/lockchain-deb/: Cargo.toml
packaging/lockchain-deb/src/: lib.rs
packaging/systemd/: lockchain-daemon.service  lockchain-key-usb.service  lockchain-unlock.service  lockchain-zfs.service  lockchain-zfs@.service
scripts/: create-issues.sh  create-project.sh  setup-labels.sh
