[workspace]
resolver = "2"
members = [
    "crates/lockchain-core",
    "crates/lockchain-zfs",
    "crates/lockchain-key-usb",
    "crates/lockchain-daemon",
    "crates/lockchain-cli",
    "crates/lockchain-ui",
    "packaging/lockchain-deb",
]

[workspace.package]
version = "0.1.9"
edition = "2021"
authors = ["Angus // x4ngus@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lockchain-org/lockchain-zfs"
homepage = "https://lockchain.io"
categories = ["security", "filesystem", "encryption"]
keywords = ["zfs", "encryption", "security", "usb", "gui"]
