[package]
name = "lockchain-daemon"
version = "0.1.9"
edition = "2021"

[dependencies]
lockchain-core = { path = "../lockchain-core" }
lockchain-zfs = { path = "../lockchain-zfs" }
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread","macros","signal","time","net","sync","io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
env_logger = "0.10"
anyhow = "1"
