[package]
name = "lockchain-ui"
version = "0.1.9"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio","image"] }
lockchain-core = { path = "../lockchain-core" }
lockchain-zfs = { path = "../lockchain-zfs" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
